--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 
 						<h2 class="module-title font-alt">THE TEAM</h2>
 						<div class="module-subtitle font-serif large-text">
-							We met each other as researchers during our Ph.D. studies in Computer Science and Engineering. We shared the vision of a novel, people-focused business: welcome to our Bottega.
+							Riccardo, Matteo and Alessandro met each other as researchers during our Ph.D. studies in Computer Science and Engineering, sharing the vision of a novel, people-focused business: <br> welcome to our Bottega.
 						</div>
 
 					</div>
@@ -284,8 +284,10 @@
 								</div>
 							</div>
 							<div class="team-descr font-alt">
+								
 								<div class="team-name">Riccardo Cattaneo</div>
-								<div class="team-role">Hardware & Software Engineer, Co-Founder</div>
+								<div class="team-role">Hardware & Software Engineer, CEO</div>
+								<div class="team-role">PhD Candidate in Computer Engineering</div>
 							</div>
 						</div>
 
@@ -309,7 +311,8 @@
 							</div>
 							<div class="team-descr font-alt">
 								<div class="team-name">Matteo Ferroni</div>
-								<div class="team-role">Infrastructure & Backend Engineer, Co-Founder</div>
+								<div class="team-role">Infrastructure & Backend Engineer, CTO</div>
+								<div class="team-role">PhD Candidate in Computer Engineering</div>
 							</div>
 						</div>
 
@@ -334,6 +337,7 @@
 							<div class="team-descr font-alt">
 								<div class="team-name">Alessandro Nacci</div>
 								<div class="team-role">Mobile & Software Engineer, Co-Founder</div>
+								<div class="team-role">PhD Candidate in Computer Engineering</div>
 							</div>
 						</div>
 
@@ -341,6 +345,85 @@
 					<!-- Team item end -->
 
 				</div><!-- .row -->
+
+				<br>
+
+				<div class="row">
+
+
+					<!-- Team item star -->
+					<div class="col-sm-6 col-md-4 mb-sm-20 wow fadeInUp" style="visibility: hidden; -webkit-animation-name: none;">
+
+						<div class="team-item">
+							<div class="team-image">
+								<img src="./img/jacopo.png" alt="">
+								<div class="team-detail">
+									<h5 class="font-alt"></h5>
+									<p class="font-serif">Optimistic by nature, I love finding smart ways to solve problems.</p>
+									<div class="team-social">
+										<a href="https://www.facebook.com/jacopo.fiorenza.5"><i class="fa fa-facebook"></i></a>
+										<a href="https://it.linkedin.com/in/jacopofiorenza/it"><i class="fa fa-linkedin"></i></a>
+									</div>
+								</div>
+							</div>
+							<div class="team-descr font-alt">
+								<div class="team-name">Jacopo Fiorenza</div>
+								<div class="team-role">Mobile and Frontend Engineer</div>
+							</div>
+						</div>
+
+					</div>
+					<!-- Team item end -->
+
+					<!-- Team item star -->
+					<div class="col-sm-6 col-md-4 mb-sm-20 wow fadeInUp" style="visibility: hidden; -webkit-animation-name: none;">
+
+						<div class="team-item">
+							<div class="team-image">
+								<img src="./img/andrea.png" alt="">
+								<div class="team-detail">
+									<h5 class="font-alt"></h5>
+									<p class="font-serif">There’s nothing better than sharing ideas and working together.</p>
+									<div class="team-social">
+										<a href="https://www.facebook.com/andre.mariani.9"><i class="fa fa-facebook"></i></a>
+										<a href="https://it.linkedin.com/in/andreamariani91"><i class="fa fa-linkedin"></i></a>
+									</div>
+								</div>
+							</div>
+							<div class="team-descr font-alt">
+								<div class="team-name">Andrea Mariani</div>
+								<div class="team-role">Backend Engineer</div>
+							</div>
+						</div>
+
+					</div>
+					<!-- Team item end -->
+
+					<!-- Team item star -->
+					<div class="col-sm-6 col-md-4 mb-sm-20 wow fadeInUp" style="visibility: hidden; -webkit-animation-name: none;">
+
+						<div class="team-item">
+							<div class="team-image">
+								<img src="./img/giovanni.jpg" alt="">
+								<div class="team-detail">
+									<h5 class="font-alt"></h5>
+									<p class="font-serif">Programming is an art.</p>
+									<div class="team-social">
+										<a href="https://www.facebook.com/gbettinazzi"><i class="fa fa-facebook"></i></a>
+										<a href="https://it.linkedin.com/pub/giovanni-bettinazzi/86/b70/45b"><i class="fa fa-linkedin"></i></a>
+									</div>
+								</div>
+							</div>
+							<div class="team-descr font-alt">
+								<div class="team-name">Giovanni Bettinazzi</div>
+								<div class="team-role">Mobile & Software Engineer</div>
+							</div>
+						</div>
+
+					</div>
+					<!-- Team item end -->
+
+				</div><!-- .row -->				
 
 			</div>
 		</section>
