--- a/index.html
+++ b/index.html
@@ -529,12 +529,12 @@
 							<li class="work-item marketing webdesign">
 								<a href="#map-section">
 									<div class="work-image">
-										<img src="photos/empty.png" alt="">
+										<img src="photos/naturmilano.png" alt="">
 									</div>
 									<div class="work-caption font-alt">
-										<h3 class="work-title">Do you want to be our next customer?</h3>
+										<h3 class="work-title">A responsive desktop and mobile website</h3>
 										<div class="work-descr">
-											Contact us. Click here.
+											HTML, Javascript, CSS, Bootstrap
 										</div>
 									</div>
 								</a>
