--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	
 				<ul class="nav navbar-nav navbar-right">	
 					<li><a href="#">Home</a></li>
-					<li><a href="#theteam">The Team</a></li>
+					<li><a href="#theteam">Technical Leads</a></li>
 					<li><a href="#portfolio">Portfolio</a></li>
 					<li><a href="#whatwedo">What we do</a></li>
 					<li><a href="#map-section">Contacts</a></li>
@@ -145,7 +145,7 @@
 
 					<div class="col-sm-6 col-sm-offset-3">
 
-						<h2 class="module-title font-alt">THE TEAM</h2>
+						<h2 class="module-title font-alt">Technical Leads</h2>
 						<div class="module-subtitle font-serif large-text">
 							Riccardo, Matteo and Alessandro met each other as researchers during our Ph.D. studies in Computer Science and Engineering, sharing the vision of a novel, people-focused business: <br> welcome to our Bottega.
 						</div>
@@ -234,85 +234,6 @@
 					<!-- Team item end -->
 
 				</div><!-- .row -->
-
-				<br>
-
-				<div class="row">
-
-
-					<!-- Team item star -->
-					<div class="col-sm-6 col-md-4 mb-sm-20 wow fadeInUp" style="visibility: hidden; -webkit-animation-name: none;">
-
-						<div class="team-item">
-							<div class="team-image">
-								<img src="./img/jacopo.png" alt="">
-								<div class="team-detail">
-									<h5 class="font-alt"></h5>
-									<p class="font-serif">Optimistic by nature, I love finding smart ways to solve problems.</p>
-									<div class="team-social">
-										<a href="https://www.facebook.com/jacopo.fiorenza.5"><i class="fa fa-facebook"></i></a>
-										<a href="https://it.linkedin.com/in/jacopofiorenza/it"><i class="fa fa-linkedin"></i></a>
-									</div>
-								</div>
-							</div>
-							<div class="team-descr font-alt">
-								<div class="team-name">Jacopo Fiorenza</div>
-								<div class="team-role">Mobile and Frontend Engineer</div>
-							</div>
-						</div>
-
-					</div>
-					<!-- Team item end -->
-
-					<!-- Team item star -->
-					<div class="col-sm-6 col-md-4 mb-sm-20 wow fadeInUp" style="visibility: hidden; -webkit-animation-name: none;">
-
-						<div class="team-item">
-							<div class="team-image">
-								<img src="./img/andrea.png" alt="">
-								<div class="team-detail">
-									<h5 class="font-alt"></h5>
-									<p class="font-serif">There’s nothing better than sharing ideas and working together.</p>
-									<div class="team-social">
-										<a href="https://www.facebook.com/andre.mariani.9"><i class="fa fa-facebook"></i></a>
-										<a href="https://it.linkedin.com/in/andreamariani91"><i class="fa fa-linkedin"></i></a>
-									</div>
-								</div>
-							</div>
-							<div class="team-descr font-alt">
-								<div class="team-name">Andrea Mariani</div>
-								<div class="team-role">Backend Engineer</div>
-							</div>
-						</div>
-
-					</div>
-					<!-- Team item end -->
-
-					<!-- Team item star -->
-					<div class="col-sm-6 col-md-4 mb-sm-20 wow fadeInUp" style="visibility: hidden; -webkit-animation-name: none;">
-
-						<div class="team-item">
-							<div class="team-image">
-								<img src="./img/giovanni.jpg" alt="">
-								<div class="team-detail">
-									<h5 class="font-alt"></h5>
-									<p class="font-serif">They say, "Whatever doesn't kill you only makes you stronger". I'm always looking for new challeges to improve my abilities and discover new technologies.</p>
-									<div class="team-social">
-										<a href="https://www.facebook.com/gbettinazzi"><i class="fa fa-facebook"></i></a>
-										<a href="https://it.linkedin.com/pub/giovanni-bettinazzi/86/b70/45b"><i class="fa fa-linkedin"></i></a>
-									</div>
-								</div>
-							</div>
-							<div class="team-descr font-alt">
-								<div class="team-name">Giovanni Bettinazzi</div>
-								<div class="team-role">Mobile & Software Engineer</div>
-							</div>
-						</div>
-
-					</div>
-					<!-- Team item end -->
-
-				</div><!-- .row -->				
 
 			</div>
 		</section>
