new customers portfolio

--- a/index.html
+++ b/index.html
@@ -334,6 +334,59 @@
 						<!-- Portfolio list start -->
 						<ul id="works-grid" class="works-grid works-grid-gut works-grid-3 works-hover-w">
 
+
+
+							<!-- Portfolio item start -->
+							<li class="work-item marketing webdesign">
+								<a href="#map-section">
+									<div class="work-image">
+										<img src="photos/sendabox.png" alt="">
+									</div>
+									<div class="work-caption font-alt">
+										<h3 class="work-title">Backend for logistic refactoring</h3>
+										<div class="work-descr">
+											Micosoft C#, MVP, HTML, Javascript, CSS, Bootstrap
+										</div>
+									</div>
+								</a>
+							</li>
+							<!-- Portfolio item end -->									
+
+
+							<!-- Portfolio item start -->
+							<li class="work-item marketing webdesign">
+								<a href="#map-section">
+									<div class="work-image">
+										<img src="photos/roialty.png" alt="">
+									</div>
+									<div class="work-caption font-alt">
+										<h3 class="work-title">Mobile Apps and Backend dev</h3>
+										<div class="work-descr">
+											Swift, iOS, Java Spring, ELK
+										</div>
+									</div>
+								</a>
+							</li>
+							<!-- Portfolio item end -->									
+
+
+							<!-- Portfolio item start -->
+							<li class="work-item marketing webdesign">
+								<a href="#map-section">
+									<div class="work-image">
+										<img src="photos/ilmiosupereroe.png" alt="">
+									</div>
+									<div class="work-caption font-alt">
+										<h3 class="work-title">Mobile Apps and Backend dev</h3>
+										<div class="work-descr">
+											Swift, iOS, Java Spring, ELK
+										</div>
+									</div>
+								</a>
+							</li>
+							<!-- Portfolio item end -->		
+
+
 							<!-- Portfolio item start -->
 							<li class="work-item illustration webdesign">
 									<div class="work-image">
@@ -445,6 +498,7 @@
 									</div>
 							</li>
 							<!-- Portfolio item end -->							
+
 
 							<!-- Portfolio item start -->
 							<li class="work-item marketing webdesign">
