--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<li><a href="#portfolio">Portfolio</a></li>
 					<li><a href="#whatwedo">What we do</a></li>
 					<li><a href="#map-section">Contacts</a></li>
-					<li><a target="_blank" href="https://bottega52srl.recruiterbox.com/jobs/fk0he54/">Recruitment</a></li>
+					<li><a target="_blank" href="https://bottega52srl.recruiterbox.com/jobs">Recruitment</a></li>
 
 				</ul>
 			</div>
