--- a/newsite/company_portfolio_backend_big_data.html
+++ b/newsite/company_portfolio_backend_big_data.html
@@ -6,13 +6,13 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	
-	<title>Bottega52 - Mobile, Cloud and IoT Engineering - Crafting your next big thing</title>
+	<title>Rival - Multipurpose Template</title>
 	
 	<!-- CSS -->
 	<link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<link href="assets/css/simpletextrotator.css" rel="stylesheet">
 	<link href="assets/css/font-awesome.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="assets/font-awesome-4.6.3/css/font-awesome.min.css">
+	<link rel="stylesheet" href="assets/font-awesome-4.6.3/css/font-awesome.min.css">	
 	<link href="assets/css/et-line-font.css" rel="stylesheet">
 	<link href="assets/css/magnific-popup.css" rel="stylesheet">
 	<link href="assets/css/flexslider.css" rel="stylesheet">
@@ -29,8 +29,6 @@
 
 	<!-- Navigation start -->
 	<nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-
-
 
 		<div class="container">
 	
@@ -80,7 +78,7 @@
 									<li><a href="company_portfolio_cloud_system_biomedical.html">Cloud System for Biomedical IoT</a></li>
 									<li><a href="company_portfolio_smart_supermarket.html">Smart SuperMarket</a></li>
 									<li><a href="company_portfolio_micropayments_charities.html">Micropayment app for charities</a></li>											
-									<li><a href="company_portfolio_smart_access_control.html">Smart Access Control System</a></li>
+									<li><a href="project.html">Project 1</a></li>
 									<li><a href="company_portfolio_warehouse_logistics_management.html">Warehouse logistic management software</a></li>
 									<li><a href="company_portfolio_web_mobile_marketplace.html">Web & Mobile Marketplace</a></li>
 									<li><a href="company_portfolio_backend_big_data.html">Backend for BigData Analysis</a></li>
@@ -110,195 +108,98 @@
 	</nav>
 	<!-- Navigation end -->
 
+	<!-- Home start -->
+	<section class="home-section home-parallax home-fade home-full-height bg-dark-60" data-background="images/img1-lo.jpg">
+
+		<div class="hs-caption">
+			<div class="caption-content">
+				<div class="font-alt mb-30">
+					BigData for Social Media
+				</div>
+				<div class="hs-title-size-3 font-alt mb-30">
+					Backend for BigData Analysis
+				</div>
+			</div>
+		</div>
+
+	</section >
+	<!-- Home end -->
+
 	<!-- Wrapper start -->
 	<div class="main">
 
-		<!-- Header section start -->
-		<section class="module bg-dark bg-dark-60" data-background="images/img1-lo.jpg">
+		<!-- Portfolio single start -->
+		<section class="module">
 			<div class="container">
 
-				<div class="row">
+				<div class="row multi-columns-row">
 
-					<div class="col-sm-6 col-sm-offset-3">
+					<!-- Work details start -->
+					<div class="col-sm-6 col-md-6 col-lg-6">
+						<div class="work-details">
 
-						<h1 class="module-title font-alt">Infrastructure Engineering</h1>
-						<div class="module-subtitle font-serif mb-0">
-							Design, creation and maintenance of scalable, reliable and secure cloud or on-premise infrastructures
+							<h2>Backend for BigData Analysis</h2>
+							<br>
+							<h5 class="work-details-title font-alt">Project Details</h5>
+
+							<p>We developed and optimised the backend infrastructure for data mining on millions of event streams from social data.</p>
+
+							<ul>
+								<li><strong>Industry:</strong><span class="font-serif"> BigData for Social Media</span></li>
+								<li><strong>Client:</strong><span class="font-serif"> Under NDA</span></li>
+								<li><strong>Year:</strong><span class="font-serif"> 2016</span></li>
+								<li><strong>Technologies:</strong><span class="font-serif"> Backend (Java Spring) - Elastic Serach</span></li>
+								<li><strong>Online:</strong><span class="font-serif"> <a href="#" target="_blank">N/A</a></span></li>
+							</ul>
+
+						</div>
+					</div>
+					<!-- Work details end -->
+
+					<!-- Project stats start -->
+					<div class="col-sm-6 col-md-6 col-lg-6">
+
+						<h2>&nbsp;<h2>
+						<br>
+						<h5 class="work-details-title font-alt">Project stats</h5>
+
+						<h6 class="font-alt"><i class="fa fa-server" aria-hidden="false"></i> Infrastructure</h6>
+						<div class="progress">
+							<div class="progress-bar pb-dark" aria-valuenow="50" role="progressbar" aria-valuemin="0" aria-valuemax="100">
+								<span class="font-alt"></span>
+							</div>
+						</div>
+
+						<h6 class="font-alt"><i class="fa fa-cloud" aria-hidden="false"></i> Backend</h6>
+						<div class="progress">
+							<div class="progress-bar pb-dark" aria-valuenow="90" role="progressbar" aria-valuemin="0" aria-valuemax="100">
+								<span class="font-alt"></span>
+							</div>
+						</div>
+
+						<h6 class="font-alt"><i class="fa fa-desktop" aria-hidden="false"></i> Frontend</h6>
+						<div class="progress">
+							<div class="progress-bar pb-dark" aria-valuenow="30" role="progressbar" aria-valuemin="0" aria-valuemax="100">
+								<span class="font-alt"></span>
+							</div>
+						</div>
+
+						<h6 class="font-alt"><i class="fa fa-mobile" aria-hidden="false"></i> Mobile</h6>
+						<div class="progress">
+							<div class="progress-bar pb-dark" aria-valuenow="30" role="progressbar" aria-valuemin="0" aria-valuemax="100">
+								<span class="font-alt"></span>
+							</div>
 						</div>
 
 					</div>
+					<!-- Project stats end -->
 
 				</div><!-- .row -->
 
 			</div>
 		</section>
-		<!-- Header section end -->
+		<!-- Portfolio single end -->
 
-		<!-- Features start -->
-		<section id="whatwedo" class="module">
-			<div class="container">
-
-				<div class="row">
-					<div class="col-sm-2 "></div>
-					<div class="col-sm-8 ">
-
-						<h2 class="module-title font-alt">What we Do</h2>
-
-						<div class="font-serif large-text align-center">
-							<p>
-								<font color="red">Please insert text here because this is an important place where to put text. It has to be long as this example text.</font>
-							</p>
-						</div>
-
-					</div>
-					<div class="col-sm-2 "></div>
-				</div><!-- .row -->
-
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-
-
-				<div class="row">
-					<div class="col-sm-6 col-sm-offset-3">
-
-						<h2 class="module-title font-alt">Technologies</h2>
-						<div class="module-subtitle font-serif">
-							<font color="red">Please insert text here because this is an important place where to put text. It has to be long as this example text.</font>
-						</div>
-
-					</div>
-
-				</div><!-- .row -->
-
-				<div class="row multi-columns-row">
-
-					<!-- Features start -->
-					<div class="col-sm-6 col-md-3 col-lg-3">
-
-						<div class="features-item">
-							<div class="features-icon">
-								<i class="fa fa-cloud" aria-hidden="false"></i>
-							</div>
-							<h3 class="features-title font-alt">Cloud</h3>
-							We design, configure and maintain public cloud IaS infrastructures on AWS and Azure.
-						</div>
-
-					</div>
-					<!-- Features end -->
-
-					<!-- Features start -->
-					<div class="col-sm-6 col-md-3 col-lg-3">
-
-						<div class="features-item">
-							<div class="features-icon">
-								<i class="fa fa-server" aria-hidden="false"></i>
-							</div>
-							<h3 class="features-title font-alt">On-Premise</h3>
-							When required by our customers, we design, configure and maintain private cloud infrastructures.
-						</div>
-
-					</div>
-					<!-- Features end -->
-
-
-					<!-- Features start -->
-					<div class="col-sm-6 col-md-3 col-lg-3">
-
-						<div class="features-item">
-							<div class="features-icon">
-								<i class="fa fa-cube" aria-hidden="false"></i>
-							</div>
-							<h3 class="features-title font-alt">Virtualization</h3>
-							<font color="red">Please insert text here because this is an important place where to put text. It has to be long as this example text.</font>
-						</div>
-
-					</div>
-					<!-- Features end -->
-
-					<!-- Features start -->
-					<div class="col-sm-6 col-md-3 col-lg-3">
-
-						<div class="features-item">
-							<div class="features-icon">
-								<i class="fa fa-cubes" aria-hidden="false"></i>
-							</div>
-							<h3 class="features-title font-alt">Containerization</h3>
-							<font color="red">Please insert text here because this is an important place where to put text. It has to be long as this example text.</font>
-
-						</div>
-
-					</div>
-					<!-- Features end -->
-
-					<!-- Features start -->
-					<div class="col-sm-6 col-md-3 col-lg-3">
-
-						<div class="features-item">
-							<div class="features-icon">
-								<i class="fa fa-clock-o" aria-hidden="false"></i>
-							</div>
-							<h3 class="features-title font-alt">Availabilty</h3>
-							<font color="red">Please insert text here because this is an important place where to put text. It has to be long as this example text.</font>
-						</div>
-
-					</div>
-					<!-- Features end -->
-
-					<!-- Features start -->
-					<div class="col-sm-6 col-md-3 col-lg-3">
-
-						<div class="features-item">
-							<div class="features-icon">
-								<i class="fa fa-users" aria-hidden="false"></i>
-							</div>
-							<h3 class="features-title font-alt">Scalability</h3>
-							<font color="red">Please insert text here because this is an important place where to put text. It has to be long as this example text.</font>
-						</div>
-
-					</div>
-					<!-- Features end -->
-
-					<!-- Features start -->
-					<div class="col-sm-6 col-md-3 col-lg-3">
-
-						<div class="features-item">
-							<div class="features-icon">
-								<i class="fa fa-database" aria-hidden="false"></i>
-							</div>
-							<h3 class="features-title font-alt">Persistency</h3>
-							<font color="red">Please insert text here because this is an important place where to put text. It has to be long as this example text.</font>
-						</div>
-
-					</div>
-					<!-- Features end -->					
-
-					<!-- Features start -->
-					<div class="col-sm-6 col-md-3 col-lg-3">
-
-						<div class="features-item">
-							<div class="features-icon">
-								<i class="fa fa-gears" aria-hidden="false"></i>
-							</div>
-							<h3 class="features-title font-alt">Continuous Integration</h3>
-							<font color="red">Please insert text here because this is an important place where to put text. It has to be long as this example text.</font>
-						</div>
-
-					</div>
-					<!-- Features end -->
-
-				</div><!-- .row -->				
-
-			</div><!-- .container -->
-		</section>
-		<!-- Features end -->		
-
-
-	
 
 		<!-- Widgets start -->
 		<div class="module-small bg-dark">
@@ -400,7 +301,9 @@
 			</div>
 		</footer>
 		<!-- Footer end -->
+
 	
+
 	</div>
 	<!-- Wrapper start -->
 	
