--- a/newsite/company_portfolio.html
+++ b/newsite/company_portfolio.html
@@ -12,7 +12,6 @@
 	<link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<link href="assets/css/simpletextrotator.css" rel="stylesheet">
 	<link href="assets/css/font-awesome.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="assets/font-awesome-4.6.3/css/font-awesome.min.css">
 	<link href="assets/css/et-line-font.css" rel="stylesheet">
 	<link href="assets/css/magnific-popup.css" rel="stylesheet">
 	<link href="assets/css/flexslider.css" rel="stylesheet">
@@ -121,9 +120,9 @@
 
 					<div class="col-sm-6 col-sm-offset-3">
 
-						<h1 class="module-title font-alt">Infrastructure Engineering</h1>
+						<h1 class="module-title font-alt">Portfolio</h1>
 						<div class="module-subtitle font-serif mb-0">
-							Design, creation and maintenance of scalable, reliable and secure cloud or on-premise infrastructures
+							A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.
 						</div>
 
 					</div>
@@ -134,168 +133,212 @@
 		</section>
 		<!-- Header section end -->
 
+
 		<!-- Features start -->
-		<section id="whatwedo" class="module">
+		<section id="portfolio" class="module">
 			<div class="container">
 
 				<div class="row">
 					<div class="col-sm-2 "></div>
 					<div class="col-sm-8 ">
 
-						<h2 class="module-title font-alt">What we Do</h2>
+						<h2 class="module-title font-alt">Portfolio</h2>
 
-						<div class="font-serif large-text align-center">
-							<p>
-								<font color="red">Please insert text here because this is an important place where to put text. It has to be long as this example text.</font>
-							</p>
-						</div>
+						<!-- Portfolio list start -->
+						<ul id="works-grid" class="works-grid works-grid-gut works-grid-3 works-hover-w">
+
+
+
+							<!-- Portfolio item start -->
+							<li class="work-item marketing webdesign">
+								<a href="#map-section">
+									<div class="work-image">
+										<img src="images/sendabox.png" alt="">
+									</div>
+									<div class="work-caption font-alt">
+										<h3 class="work-title">Backend for logistic refactoring</h3>
+										<div class="work-descr">
+											Micosoft C#, MVP, HTML, Javascript, CSS, Bootstrap
+										</div>
+									</div>
+								</a>
+							</li>
+							<!-- Portfolio item end -->									
+
+
+							<!-- Portfolio item start -->
+							<li class="work-item marketing webdesign">
+								<a href="#map-section">
+									<div class="work-image">
+										<img src="images/roialty.png" alt="">
+									</div>
+									<div class="work-caption font-alt">
+										<h3 class="work-title">Mobile Apps and Backend dev</h3>
+										<div class="work-descr">
+											Swift, iOS, Java Spring, ELK
+										</div>
+									</div>
+								</a>
+							</li>
+							<!-- Portfolio item end -->									
+
+
+							<!-- Portfolio item start -->
+							<li class="work-item marketing webdesign">
+								<a href="#map-section">
+									<div class="work-image">
+										<img src="images/ilmiosupereroe.png" alt="">
+									</div>
+									<div class="work-caption font-alt">
+										<h3 class="work-title">Mobile Apps and Backend dev</h3>
+										<div class="work-descr">
+											Swift, iOS, Java Spring, ELK
+										</div>
+									</div>
+								</a>
+							</li>
+							<!-- Portfolio item end -->		
+
+
+							<!-- Portfolio item start -->
+							<li class="work-item illustration webdesign">
+									<div class="work-image">
+										<img src="images/lovethesign.png" alt="">
+									</div>
+									<div class="work-caption font-alt">
+										<h3 class="work-title">Logistic Managment Software</h3>
+										<div class="work-descr">
+											php, magento
+										</div>
+									</div>
+							</li>
+							<!-- Portfolio item end -->
+
+							<!-- Portfolio item start -->
+							<li class="work-item marketing photography">
+									<div class="work-image">
+										<img src="images/hidden.png" alt="">
+									</div>
+									<div class="work-caption font-alt">
+										<h3 class="work-title">A chat game app</h3>
+										<div class="work-descr">
+											iOS, Android app and Node.js server
+										</div>
+									</div>
+							</li>
+							<!-- Portfolio item end -->
+
+							<!-- Portfolio item start -->
+							<li class="work-item illustration photography">
+									<div class="work-image">
+										<img src="images/skrlla.png" alt="">
+									</div>
+									<div class="work-caption font-alt">
+										<h3 class="work-title">A micropayment app in San Francisco</h3>
+										<div class="work-descr">
+											iOS app and Node.js server
+										</div>
+									</div>
+							</li>
+							<!-- Portfolio item end -->
+
+							<!-- Portfolio item start -->
+							<li class="work-item marketing photography">
+									<div class="work-image">
+										<img src="images/regioneLombardia.png" alt="">
+									</div>
+									<div class="work-caption font-alt">
+										<h3 class="work-title">Realtime voting system</h3>
+										<div class="work-descr">
+											HTML5, CSS3, jQuery, Node.js
+										</div>
+									</div>
+							</li>
+							<!-- Portfolio item end -->
+
+							<!-- Portfolio item start -->
+							<li class="work-item illustration webdesign">
+									<div class="work-image">
+										<img src="images/sofia.png" alt="">
+									</div>
+									<div class="work-caption font-alt">
+										<h3 class="work-title">Smart Hotel Technologies</h3>
+										<div class="work-descr">
+											Electronic and mechanical hardware development
+										</div>
+									</div>
+							</li>
+							<!-- Portfolio item end -->
+
+							<!-- Portfolio item start -->
+							<li class="work-item marketing webdesign">
+									<div class="work-image">
+										<img src="images/astarte.png" alt="">
+									</div>
+									<div class="work-caption font-alt">
+										<h3 class="work-title">IoT for Industry 4.0</h3>
+										<div class="work-descr">
+											Python, Docker, MQTT, Cortex MX, ELK Stack, Cloud Development
+										</div>
+									</div>
+							</li>
+							<!-- Portfolio item end -->
+
+							<!-- Portfolio item start -->
+							<li class="work-item illustration webdesign">
+									<div class="work-image">
+										<img src="images/poretti.png" alt="">
+									</div>
+									<div class="work-caption font-alt">
+										<h3 class="work-title">A social photo video totem</h3>
+										<div class="work-descr">
+											C#, Node.js, OAuth, Python
+										</div>
+									</div>
+							</li>
+							<!-- Portfolio item end -->
+
+							<!-- Portfolio item start -->
+							<li class="work-item marketing webdesign">
+									<div class="work-image">
+										<img src="images/clinique.png" alt="">
+									</div>
+									<div class="work-caption font-alt">
+										<h3 class="work-title">A social photo video totem</h3>
+										<div class="work-descr">
+											C#, Node.js, OAuth, Python
+										</div>
+									</div>
+							</li>
+							<!-- Portfolio item end -->							
+
+
+							<!-- Portfolio item start -->
+							<li class="work-item marketing webdesign">
+								<a href="#map-section">
+									<div class="work-image">
+										<img src="images/naturmilano.png" alt="">
+									</div>
+									<div class="work-caption font-alt">
+										<h3 class="work-title">A responsive desktop and mobile website</h3>
+										<div class="work-descr">
+											HTML, Javascript, CSS, Bootstrap
+										</div>
+									</div>
+								</a>
+							</li>
+							<!-- Portfolio item end -->		
+
+						</ul>
+						<!-- Portfolio list end -->
 
 					</div>
 					<div class="col-sm-2 "></div>
 				</div><!-- .row -->
 
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-
-
-				<div class="row">
-					<div class="col-sm-6 col-sm-offset-3">
-
-						<h2 class="module-title font-alt">Technologies</h2>
-						<div class="module-subtitle font-serif">
-							<font color="red">Please insert text here because this is an important place where to put text. It has to be long as this example text.</font>
-						</div>
-
-					</div>
-
-				</div><!-- .row -->
-
-				<div class="row multi-columns-row">
-
-					<!-- Features start -->
-					<div class="col-sm-6 col-md-3 col-lg-3">
-
-						<div class="features-item">
-							<div class="features-icon">
-								<i class="fa fa-cloud" aria-hidden="false"></i>
-							</div>
-							<h3 class="features-title font-alt">Cloud</h3>
-							We design, configure and maintain public cloud IaS infrastructures on AWS and Azure.
-						</div>
-
-					</div>
-					<!-- Features end -->
-
-					<!-- Features start -->
-					<div class="col-sm-6 col-md-3 col-lg-3">
-
-						<div class="features-item">
-							<div class="features-icon">
-								<i class="fa fa-server" aria-hidden="false"></i>
-							</div>
-							<h3 class="features-title font-alt">On-Premise</h3>
-							When required by our customers, we design, configure and maintain private cloud infrastructures.
-						</div>
-
-					</div>
-					<!-- Features end -->
-
-
-					<!-- Features start -->
-					<div class="col-sm-6 col-md-3 col-lg-3">
-
-						<div class="features-item">
-							<div class="features-icon">
-								<i class="fa fa-cube" aria-hidden="false"></i>
-							</div>
-							<h3 class="features-title font-alt">Virtualization</h3>
-							<font color="red">Please insert text here because this is an important place where to put text. It has to be long as this example text.</font>
-						</div>
-
-					</div>
-					<!-- Features end -->
-
-					<!-- Features start -->
-					<div class="col-sm-6 col-md-3 col-lg-3">
-
-						<div class="features-item">
-							<div class="features-icon">
-								<i class="fa fa-cubes" aria-hidden="false"></i>
-							</div>
-							<h3 class="features-title font-alt">Containerization</h3>
-							<font color="red">Please insert text here because this is an important place where to put text. It has to be long as this example text.</font>
-
-						</div>
-
-					</div>
-					<!-- Features end -->
-
-					<!-- Features start -->
-					<div class="col-sm-6 col-md-3 col-lg-3">
-
-						<div class="features-item">
-							<div class="features-icon">
-								<i class="fa fa-clock-o" aria-hidden="false"></i>
-							</div>
-							<h3 class="features-title font-alt">Availabilty</h3>
-							<font color="red">Please insert text here because this is an important place where to put text. It has to be long as this example text.</font>
-						</div>
-
-					</div>
-					<!-- Features end -->
-
-					<!-- Features start -->
-					<div class="col-sm-6 col-md-3 col-lg-3">
-
-						<div class="features-item">
-							<div class="features-icon">
-								<i class="fa fa-users" aria-hidden="false"></i>
-							</div>
-							<h3 class="features-title font-alt">Scalability</h3>
-							<font color="red">Please insert text here because this is an important place where to put text. It has to be long as this example text.</font>
-						</div>
-
-					</div>
-					<!-- Features end -->
-
-					<!-- Features start -->
-					<div class="col-sm-6 col-md-3 col-lg-3">
-
-						<div class="features-item">
-							<div class="features-icon">
-								<i class="fa fa-database" aria-hidden="false"></i>
-							</div>
-							<h3 class="features-title font-alt">Persistency</h3>
-							<font color="red">Please insert text here because this is an important place where to put text. It has to be long as this example text.</font>
-						</div>
-
-					</div>
-					<!-- Features end -->					
-
-					<!-- Features start -->
-					<div class="col-sm-6 col-md-3 col-lg-3">
-
-						<div class="features-item">
-							<div class="features-icon">
-								<i class="fa fa-gears" aria-hidden="false"></i>
-							</div>
-							<h3 class="features-title font-alt">Continuous Integration</h3>
-							<font color="red">Please insert text here because this is an important place where to put text. It has to be long as this example text.</font>
-						</div>
-
-					</div>
-					<!-- Features end -->
-
-				</div><!-- .row -->				
-
 			</div><!-- .container -->
 		</section>
-		<!-- Features end -->		
+		<!-- Features end -->
 
 
 	
