added logos on infr

--- a/newsite/services_infrastructure.html
+++ b/newsite/services_infrastructure.html
@@ -291,11 +291,129 @@
 					</div>
 					<!-- Features end -->
 
-				</div><!-- .row -->				
+				</div><!-- .row -->		
+
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+
+				<div class="row">
+					<div class="col-sm-2 "></div>
+					<div class="col-sm-8 ">
+
+						<h2 class="module-title font-alt">Software Stacks</h2>
+
+					</div>
+					<div class="col-sm-2 "></div>
+				</div><!-- .row -->
+
+
+				<div class="row multi-columns-row">
+
+					<!-- Gallery item start -->
+					<div class="col-sm-6 col-md-2 col-lg-2">
+						<div class="gallery-item">
+							<img src="images/aws-logo.png" alt="">
+						</div>
+					</div>
+					<!-- Gallery item end -->
+
+
+					<!-- Gallery item start -->
+					<div class="col-sm-6 col-md-2 col-lg-2">
+						<div class="gallery-item">
+							<img src="images/azure-logo.png" alt="">
+						</div>
+					</div>
+					<!-- Gallery item end -->
+
+
+					<!-- Gallery item start -->
+					<div class="col-sm-6 col-md-2 col-lg-2">
+						<div class="gallery-item">
+							<img src="images/docker-logo.png" alt="">
+						</div>
+					</div>
+					<!-- Gallery item end -->
+
+					<!-- Gallery item start -->
+					<div class="col-sm-6 col-md-2 col-lg-2">
+						<div class="gallery-item">
+							<img src="images/kvm-logo.png" alt="">
+						</div>
+					</div>
+					<!-- Gallery item end -->					
+
+
+					<!-- Gallery item start -->
+					<div class="col-sm-6 col-md-2 col-lg-2">
+						<div class="gallery-item">
+							<img src="images/openstack-logo.png" alt="">
+						</div>
+					</div>
+					<!-- Gallery item end -->					
+
+
+					<!-- Gallery item start -->
+					<div class="col-sm-6 col-md-2 col-lg-2">
+						<div class="gallery-item">
+							<img src="images/openvz-logo.png" alt="">
+						</div>
+					</div>
+					<!-- Gallery item end -->					
+
+
+					<!-- Gallery item start -->
+					<div class="col-sm-6 col-md-2 col-lg-2">
+						<div class="gallery-item">
+							
+						</div>
+					</div>
+					<!-- Gallery item end -->	
+
+					<!-- Gallery item start -->
+					<div class="col-sm-6 col-md-2 col-lg-2">
+						<div class="gallery-item">
+							<img src="images/dcos-logo.png" alt="">
+						</div>
+					</div>
+					<!-- Gallery item end -->			
+
+										<!-- Gallery item start -->
+					<div class="col-sm-6 col-md-2 col-lg-2">
+						<div class="gallery-item">
+							<img src="images/docker-swarm-logo.png" alt="">
+						</div>
+					</div>
+					<!-- Gallery item end -->			
+
+										<!-- Gallery item start -->
+					<div class="col-sm-6 col-md-2 col-lg-2">
+						<div class="gallery-item">
+							<img src="images/marathon-logo.png" alt="">
+						</div>
+					</div>
+					<!-- Gallery item end -->			
+
+										<!-- Gallery item start -->
+					<div class="col-sm-6 col-md-2 col-lg-2">
+						<div class="gallery-item">
+							<img src="images/kubernetes-logo.png" alt="">
+						</div>
+					</div>
+					<!-- Gallery item end -->			
+
+				</div><!-- .row -->
 
 			</div><!-- .container -->
 		</section>
 		<!-- Features end -->		
+
+
 
 
 	
