--- a/newsite/index.html
+++ b/newsite/index.html
@@ -194,7 +194,7 @@
 
 							
 							<div class="module-subtitle font-serif large-text">
-								Bottega52 is an engineering company that designs, implements, deploys, and maintains software solutions to create Cloud based systems, Mobile apps and Internet of Things applications.
+								Bottega52 engineers, implements, deploys, and maintains custom, tailor made full-stack software solutions.
 							</div>
 
 
@@ -218,7 +218,7 @@
 							<h2 class="module-title font-alt">System Integrator</h2>
 							
 							<div class="module-subtitle font-serif large-text">
-								Bottega52 is an engineering company that designs, implements, deploys, and maintains software solutions to create Cloud based systems, Mobile apps and Internet of Things applications.
+								Bottega52 integrates existing software stacks for the benefit of our customers’ businesses.
 							</div>
 
 
@@ -264,7 +264,7 @@
 
 						<h2 class="module-title font-alt">Our Services</h2>
 						<div class="module-subtitle font-serif large-text">
-							As a software house and system integration in the Internet of Field market, we engineer all the components needed to create a full IoT system, from the infrastructure to the devices. 
+							As a software house and system integration in the Internet of Field market, we engineer all the components needed to create a full IoT system, from the infrastructure to the devices.
 						</div>
 
 					</div>
@@ -375,7 +375,7 @@
 
 						<h2 class="module-title font-alt">Our Products</h2>
 						<div class="module-subtitle font-serif large-text">
-							We have crystallized our experience in the web and IoT world in few amazing products. We integrate them into your existing or new solutions, giving additional power to your ideas, projects and systems.
+							We have crystallized our experiences in the web and IoT markets in few amazing products. We integrate them into your existing or to-be solutions, giving additional power to your ideas, projects and systems.
 						</div>
 
 					</div>
